--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.24.0",
+    "slate": "^0.103.0",
+    "slate-react": "^0.107.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
